# mpris-client-async

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/mpris/: mod.rs  player_stream.rs
src/player/: enums.rs  metadata.rs  mod.rs  properties.rs  signals.rs  streams.rs
