[package]
name = "mpris-client-async"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "example"
test = false 
bench = false
path = "src/main.rs"


[dependencies]
async-lock = "3.4.2"
async-trait = "0.1.89"
futures = "0.3.32"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
zbus = {version = "5.13.2", features = ["tokio"] }
