[package]
name = "mpris-client-async"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "example"
test = false 
bench = false
path = "src/main.rs"


[dependencies]
async-lock = "3.4.2"
futures = "0.3.32"
pin-project = "1.1.10"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
zbus = {version = "5.13.2", features = ["tokio"] }
